Fixed non-visible pagination page-links.

--- a/LocalCommunityVotingPlatform/ClientApp/src/css/Style.css
+++ b/LocalCommunityVotingPlatform/ClientApp/src/css/Style.css
@@ -102,3 +102,12 @@ body {
 .modal-open {
     overflow: visible;
 }
+
+.dataTables_info{
+    color: white;
+}
+
+.page-item{
+    color: black;
+}
+ 
